<resources>
    <string name="app_name">FitnessAppForMyself</string>
    <string name="profile_string">Add Profile</string>
    <string name="settings">SETTINGS</string>
    <string name="surname">Surname:</string>
    <string name="add">ADD</string>
    <string name="age">Age:</string>
    <string name="name">Name:</string>
    <string name="weight">Weight(kg):</string>
    <string name="height">Height(cm):</string>
    <string name="save">SAVE INFO</string>
    <string name="just_save">SAVE</string>
    <string name="profiles">MY PROFILE</string>
    <string name="kg">kg</string>
    <string name="cm">cm</string>
    <string name="next_page">NEXT</string>
    <string name="gender">Gender:</string>
    <string name="male_female">m/f</string>
    <string name="HowOften">How Often Do You Workout?</string>
    <string name="often1">very little or none</string>
    <string name="often2">1–3 days per week</string>
    <string name="often3">3–5 days per week</string>
    <string name="often4">6–7 days per week</string>
    <string name="often5">physical job + hard workout</string>
    <string name="avatar1">PICK YOUR AVATAR TO CONTINUE</string>
    <string name="home">Home</string>
    <string name="bmr">BMR:</string>
    <string name="burnedCals">Calories Burned:</string>
    <string name="activityLevel">Activity Level:</string>
    <string name="calories">kcals</string>
    <string name="waist">Waist Circumference:</string>
    <string name="gender_m_f">male/female</string>
    <string name="empty" />
    <string name="reset_timer">resets the timer</string>
    <string name="enter_a_name">name</string>
    <string name="enter_an_age">age</string>
    <string name="enter_a_weight">weight</string>
    <string name="enter_a_height">height</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="calc_body_fat">Calculate Body Fat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="neck">Neck: Circumference</string>
    <string name="save_bodyfat">Save Bodyfat</string>
    <string name="body_fat_percentage">Body Fat:</string>
    <string name="hip_circumference">Hip Circumference:</string>
    <string name="deleteProfOne">DELETE PROFILE</string>
    <string name="deleteProfTwo">DELETE SECOND PROFILE</string>
    <string name="deleteProf3">DELETE THIRD PROFILE</string>
    <string name="createWorkout">CREATE YOUR WORKOUT SET</string>
    <string name="read_me">READ ME</string>
    <string name="about_app">About the App:</string>
    <string name="creator_name">Creator:</string>
    <string name="creator_name_aka">csinop</string>
    <string name="attention">DISCLAIMER:</string>
    <string name="about_calories">Calorie calculations give you an approximation, those values are not 100% accurate. Using them without consideration can affect your health in a negative way.</string>
    <string name="bodyFat_attention">Body fat calculations give you an approximation with an error margin of 3–5%, thus do not take those numbers at face value, doing so could affect your health in a negative way.</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="percentage">%</string>
    <string name="navigation">NAVIGATION</string>
    <string name="app_menu">APP</string>
    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Close</string>
    <string name="current_profile_avatar">CURRENT PROFILE: </string>
    <string name="user">USER: </string>
    <string name="view_workouts">VIEW WORKOUTS: </string>
    <string name="create_weekly_plan">CREATE YOUR WEEKLY PLAN </string>
    <string name="edit_calender">PLAN YOUR WEEK</string>
    <string name="empty_nine_fold">no workout</string>
    <string name="return_home">HOME</string>
    <string name="save_return_home">SAVE AND RETURN HOME</string>
    <string name="delete_plan">DELETE PLAN</string>
    <string name="reset_selection">RESET SELECTION</string>
    <string name="workout_of_today">TODAY\'S WORKOUT</string>
    <string name="view_in_detail">VIEW IN DETAIL</string>
    <string name="card_view_title">SET REP AND SET COUNT</string>
    <string name="set">SET(s):</string>
    <string name="set_count">SET COUNT:</string>
    <string name="rep">REP(s):</string>
    <string name="rep_count">REP COUNT:</string>
    <string name="countdown_text">02:00</string>
    <string name="start_timer">START</string>
    <string name="pause_timer">PAUSE</string>
    <string name="imp0rt">Import Workout</string>
    <string name="export">Export Workout</string>
    <string name="saved_changes">Changes have been saved.</string>
    <string name="export_successful">Export Successful</string>
    <string name="import_successful">Import Successful</string>
    <string name="invalid_username">Username cannot be empty or contain special characters</string>
    <string name="invalid_weight">Weight must be a positive number and no more than 3 digits</string>
    <string name="invalid_height">Height must be a positive number and no more than 3 digits</string>
    <string name="invalid_age">Age must be a positive number and no more than 2 digits</string>
    <string name="empty_age">Age field cannot be left empty.</string>
    <string name="empty_weight">Weight field cannot be left empty.</string>
    <string name="empty_height">Height field cannot be left empty.</string>
    <string name="invalid_gender">Gender must be either male or female</string>
    <string name="invalid_type_string">Weight,Age,Height fields cannot contain letters</string>
    <string name="none_selected">Select one of the above first</string>
    <string name="body_fat_measurements">(waist, neck, hip) measurements must be positive numbers</string>
    <string name="hide_failed">Failed to hide moves.</string>
    <string name="hide_successful">Successfully hid moves.</string>
    <string name="import_failed">Import Failed</string>
    <string name="notify_on_import_failure">Import failed, please check the file you are trying to import.</string>
    <string name="file_does_not_exist">File does not exist.</string>
    <string name="unable_to_read_the_file">Unable to read the file.</string>
    <string name="wrong_file">Incorrect file.</string>
    <string name="pick_a_file_first">You should pick a file first.</string>
    <string name="unable_to_delete_file">Unable to delete file.</string>
    <string name="unable_to_create_file">Unable to create file.</string>
    <string name="export_failed">Export Failed</string>
    <string name="export_already_in_progress">Export is already in progress, please wait.</string>
    <string name="file_manager">File Manager</string>
    <string name="new_folder">NF</string>
    <string name="delete_folder">DF</string>
    <string name="refresh">RF</string>
    <string name="go_back">B</string>
    <string name="rename">Rename</string>
    <string name="confirm">Confirm</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="rename_dialog">Rename to: </string>
    <string-array name="WeekDays">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string name="Monday">MONDAY</string>
    <string name="Tuesday">TUESDAY</string>
    <string name="Wednesday">WEDNESDAY</string>
    <string name="Thursday">THURSDAY</string>
    <string name="Friday">FRIDAY</string>
    <string name="Saturday">SATURDAY</string>
    <string name="Sunday">SUNDAY</string>
    <string name="cd_delete_prof">Deletes Profile</string>
    <string name="cd_show_pic">Displays Profile Picture</string>
    <string name="off_day">Today is your off day.</string>
    <string name="chest">CHEST</string>
    <string-array name="CHEST">
        <item>BENCH PRESS</item>
        <item>INCLINE BENCH PRESS</item>
        <item>DUMBBELL CHEST PRESS</item>
        <item>INCLINE DUMBBELL CHEST PRESS</item>
        <item>DUMBBELL FLY</item>
        <item>INCLINE DUMBBELL FLY</item>
        <item>CABLE CROSS OVER</item>
    </string-array>
    <string-array name="BICEPS">
        <item>BARBELL CURLS</item>
        <item>DUMBBELL CURLS</item>
        <item>CABLE CURlS</item>
        <item>HAMMER CURLS</item>
        <item>PREACHER CURLS</item>
        <item>CONCENTRATION CURLS</item>
    </string-array>
    <string-array name="TRICEPS">
        <item>CABLE TRICEPS PUSH DOWN</item>
        <item>TRICEPS EXTENSION</item>
        <item>TRICEPS DIPS</item>
        <item>SKULL CRUSHER</item>
        <item>BENCH DIPS</item>
    </string-array>
    <string-array name="BACK">
        <item>LAT PULL DOWN</item>
        <item>DEADLIFT</item>
        <item>PULL UPS</item>
        <item>DEADLIFT SUMO</item>
        <item>INCLINE DUMBBELL ROW</item>
        <item>CHIN UPS</item>
        <item>SEATED CABLE ROW</item>
    </string-array>
    <string-array name="LEGS">
        <item>SQUAT</item>
        <item>LUNGES</item>
        <item>LEG PRESS</item>
        <item>FACE PULLS</item>
        <item>HAMSTRING CURLS</item>
    </string-array>
    <string-array name="SHOULDERS">
        <item>LATERAL RAISES</item>
        <item>SEATED MILITARY PRESS</item>
        <item>FRONT RAISE</item>
        <item>FACE PULLS</item>
        <item>SEATED DUMBBELL SHOULDER PRESS</item>
    </string-array>
    <string-array name="CARDIO">
        <item>TREADMILL</item>
        <item>CYCLING</item>
        <item>ELLIPTICAL</item>
        <item>SKIPPING ROPE</item>
        <item>HIIT</item>
        <item>RUNNING</item>
        <item>WALKING</item>
    </string-array>
    <string name="OFF">OFF</string>
    <string name="toLoseWeightThree">If you combine those two ways, you can lose weight much more quickly. Avoid eating calorie dense foods and try to eat foods with more protein.
        Foods with high protein content will keep you full longer, thus reducing your desire for snacks</string>
    <string name="DISCLAIMER_ONE">The information provided by my mobile application is for general information purposes only. My mobile application does not contain any medical or professional advice.
    I make no representation of warranty of any kind, express or implied, regarding the accuracy, adequacy, validity, reliability, availability or completeness of any information on my mobile application.
    Under no circumstances shall I have any liability to you for any loss or damage of any kind incurred as a result of the use of my mobile application or reliance on any information provided on my mobile application.
    Your use of my mobile application and your reliance on any information on my mobile application is solely at your own risk.</string>
    <string name="DISCLAIMER_TWO">This mobile application does not contain fitness advice. The fitness information is provided for informational and educational purposes only and is not a
    substitute for professional advice. I do not provide any kind of fitness advice. The use and reliance of any information contained in my mobile application is solely at your own risk.</string>
    <string name="DISCLAIMER_UPDATE">Last updated April 22, 2022</string>
    <string-array name="bodyParts">
        <item>CHEST</item>
        <item>BICEPS</item>
        <item>TRICEPS</item>
        <item>BACK</item>
        <item>LEGS</item>
        <item>SHOULDERS</item>
        <item>CARDIO</item>
    </string-array>
    <string name="MainMenuUserHint">You can click the weekday words to see and change that day\'s workout plan.</string>
    <string name="MainMenuUserHintTodayWorkout">You can click the Today\'s Workout text to see the workout of the day.</string>
    <string name="forwardArrows">\>\></string>
    <string name="back">Go Back</string>
    <string name="back_arrow"><![CDATA[<<]]></string>
</resources>